examples/05-listenerset/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-ns
spec:
  gatewayClassName: kgateway
  listeners:
  - name: dumb
    port: 15001
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchLabels:
          allow-routes: "yes"
